--- a/app/src/main/res/layout/activity_add_user.xml
+++ b/app/src/main/res/layout/activity_add_user.xml
@@ -49,17 +49,32 @@
 
                 <ImageView
                         android:id="@+id/profileImageView"
-                        android:layout_width="120dp"
-                        android:layout_height="120dp"
+                        android:layout_width="146dp"
+                        android:layout_height="146dp"
                         android:layout_marginStart="@dimen/margin_small"
                         android:layout_marginTop="@dimen/margin_medium"
                         android:layout_marginEnd="@dimen/margin_small"
-                        android:padding="@dimen/padding_small"
-                        app:imagePathOrUrl="@{viewModel.userImageProfile}"
+                        android:background="@drawable/circle_background"
+                        android:scaleType="center"
+                        app:imagePathOrUrlCircle="@{viewModel.userImageProfile}"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/iconfinder_user_profile_imagee" />
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                        android:id="@+id/tvAddProfilePhoto"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="@dimen/margin_12"
+                        android:text="@string/add_photo"
+                        android:textColor="@color/gray_3"
+                        android:textSize="@dimen/text_size_14"
+                        android:textStyle="bold"
+                        app:drawableTopCompat="@drawable/ic_camera"
+                        app:layout_constraintBottom_toBottomOf="@+id/profileImageView"
+                        app:layout_constraintEnd_toEndOf="@+id/profileImageView"
+                        app:layout_constraintStart_toStartOf="@+id/profileImageView"
+                        app:layout_constraintTop_toTopOf="@+id/profileImageView" />
 
                 <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/ilCompleteName"
@@ -149,15 +164,30 @@
 
                 <ImageView
                         android:id="@+id/ivResidenceProof"
-                        android:layout_width="120dp"
+                        android:layout_width="155dp"
                         android:layout_height="120dp"
                         android:layout_marginTop="@dimen/margin_medium"
-                        android:padding="@dimen/padding_small"
+                        android:background="@drawable/background_image_bike"
                         app:imagePathOrUrl="@{viewModel.userImageDocumentResidence}"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/ilAddress"
-                        app:srcCompat="@drawable/iconfinder_document" />
+                        app:layout_constraintTop_toBottomOf="@id/ilAddress" />
+
+                <TextView
+                        android:id="@+id/tvAddResidencePhoto"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="@dimen/margin_12"
+                        android:gravity="center"
+                        android:text="Comprovante de residência"
+                        android:textColor="@color/gray_3"
+                        android:textSize="@dimen/text_size_14"
+                        android:textStyle="bold"
+                        app:drawableTopCompat="@drawable/ic_camera"
+                        app:layout_constraintBottom_toBottomOf="@+id/ivResidenceProof"
+                        app:layout_constraintEnd_toEndOf="@+id/ivResidenceProof"
+                        app:layout_constraintStart_toStartOf="@+id/ivResidenceProof"
+                        app:layout_constraintTop_toTopOf="@+id/ivResidenceProof" />
 
                 <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/ilCpf"
@@ -191,15 +221,30 @@
 
                 <ImageView
                         android:id="@+id/ivFrontDocument"
-                        android:layout_width="120dp"
+                        android:layout_width="155dp"
                         android:layout_height="120dp"
                         android:layout_marginTop="@dimen/margin_medium"
-                        android:padding="@dimen/padding_small"
+                        android:background="@drawable/background_image_bike"
                         app:imagePathOrUrl="@{viewModel.userImageDocumentFront}"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintRight_toRightOf="@id/guideline"
-                        app:layout_constraintTop_toBottomOf="@id/ilCpf"
-                        app:srcCompat="@drawable/iconfinder_id_profile_female" />
+                        app:layout_constraintTop_toBottomOf="@id/ilCpf" />
+
+                <TextView
+                        android:id="@+id/tvAddFrontDocumentPhoto"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="@dimen/margin_12"
+                        android:gravity="center"
+                        android:text="Frente do documento"
+                        android:textColor="@color/gray_3"
+                        android:textSize="@dimen/text_size_14"
+                        android:textStyle="bold"
+                        app:drawableTopCompat="@drawable/ic_camera"
+                        app:layout_constraintBottom_toBottomOf="@+id/ivFrontDocument"
+                        app:layout_constraintEnd_toEndOf="@+id/ivFrontDocument"
+                        app:layout_constraintStart_toStartOf="@+id/ivFrontDocument"
+                        app:layout_constraintTop_toTopOf="@+id/ivFrontDocument" />
 
                 <TextView
                         android:layout_width="wrap_content"
@@ -212,15 +257,30 @@
 
                 <ImageView
                         android:id="@+id/ivBackDocument"
-                        android:layout_width="120dp"
+                        android:layout_width="155dp"
                         android:layout_height="120dp"
                         android:layout_marginTop="@dimen/margin_medium"
-                        android:padding="@dimen/padding_small"
+                        android:background="@drawable/background_image_bike"
                         app:imagePathOrUrl="@{viewModel.userImageDocumentBack}"
                         app:layout_constraintLeft_toLeftOf="@id/guideline"
                         app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/ilCpf"
-                        app:srcCompat="@drawable/iconfinder_document" />
+                        app:layout_constraintTop_toBottomOf="@id/ilCpf" />
+
+                <TextView
+                        android:id="@+id/tvAddBackDocumentPhoto"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="@dimen/margin_12"
+                        android:gravity="center"
+                        android:text="Verso do documento"
+                        android:textColor="@color/gray_3"
+                        android:textSize="@dimen/text_size_14"
+                        android:textStyle="bold"
+                        app:drawableTopCompat="@drawable/ic_camera"
+                        app:layout_constraintBottom_toBottomOf="@+id/ivBackDocument"
+                        app:layout_constraintEnd_toEndOf="@+id/ivBackDocument"
+                        app:layout_constraintStart_toStartOf="@+id/ivBackDocument"
+                        app:layout_constraintTop_toTopOf="@+id/ivBackDocument" />
 
                 <TextView
                         android:layout_width="wrap_content"
@@ -235,9 +295,9 @@
                         android:id="@+id/saveButton"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="@dimen/margin_small"
+                        android:layout_marginStart="@dimen/margin_medium"
                         android:layout_marginTop="@dimen/margin_big"
-                        android:layout_marginEnd="@dimen/margin_small"
+                        android:layout_marginEnd="@dimen/margin_medium"
                         android:layout_marginBottom="@dimen/margin_small"
                         android:enabled="@{viewModel.isButtonEnabled}"
                         android:onClick="@{() -> viewModel.showLgpd()}"
@@ -253,4 +313,3 @@
         </ScrollView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
-
