--- a/app/src/main/res/layout/fragment_step_final_return_bike.xml
+++ b/app/src/main/res/layout/fragment_step_final_return_bike.xml
@@ -126,7 +126,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_medium"
                     android:layout_marginEnd="@dimen/margin_medium"
-                    android:text="@{@string/bike_withdraw_date(StringExtension.getDateFromDateTime(ExtensionFunctions.getLastWithdraw(viewModel.bikeHolder).date))}"
+                    android:text="@{@string/bike_withdraw_date(ExtensionFunctions.getLastWithdraw(viewModel.bikeHolder).date)}"
                     android:textColor="@color/text_gray"
                     android:textSize="12sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -141,7 +141,7 @@
                     android:layout_marginStart="@dimen/margin_medium"
                     android:layout_marginEnd="@dimen/margin_medium"
                     android:layout_marginBottom="@dimen/margin_medium"
-                    android:text="@{@string/bike_devolution_date(StringExtension.getDateFromDateTime(viewModel.devolutionDate))}"
+                    android:text="@{@string/bike_devolution_date(viewModel.devolutionDate)}"
                     android:textColor="@color/text_gray"
                     android:textSize="12sp"
                     app:layout_constraintBottom_toBottomOf="parent"
