--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -1,32 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        xmlns:tools="http://schemas.android.com/tools">
+    
+    <data>
+        <variable
+                name="viewModel"
+                type="app.igormatos.botaprarodar.presentation.user.UserViewModel" />
+    </data>
 
-    <app.igormatos.botaprarodar.common.customview.BikeActionStepperView
-            android:id="@+id/userActionStepper"
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:current_icon_color="@color/green_teal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:next_icon_color="@color/gray_silver"
-            app:previous_icon_color="@color/white"
-            app:select_background="@color/green_teal"
-            app:unselect_background="@color/white" />
+            android:layout_height="match_parent">
 
-    <fragment
-            android:id="@+id/returnNavHostFragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:defaultNavHost="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/userActionStepper"
-            app:navGraph="@navigation/user_nav_graph" />
+        <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appBarLayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:theme="@style/AppTheme.AppBarOverlay"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="@color/white"
+                    app:setTitle="@{viewModel.isEditableAvailable}"
+                    app:titleTextColor="@color/dark_gray" />
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <app.igormatos.botaprarodar.common.customview.BikeActionStepperView
+                android:id="@+id/userActionStepper"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:current_icon_color="@color/green_teal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/appBarLayout"
+                app:next_icon_color="@color/gray_silver"
+                app:previous_icon_color="@color/white"
+                app:select_background="@color/green_teal"
+                app:unselect_background="@color/white" />
+
+        <fragment
+                android:id="@+id/returnNavHostFragment"
+                android:name="androidx.navigation.fragment.NavHostFragment"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                app:defaultNavHost="true"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/userActionStepper"
+                app:navGraph="@navigation/user_nav_graph" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
