--- a/app/src/main/res/layout/fragment_user_quiz.xml
+++ b/app/src/main/res/layout/fragment_user_quiz.xml
@@ -139,16 +139,29 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
+            <TextView
+                android:id="@+id/userQuizMotivationOpenQuestionLabel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:lineSpacingExtra="3dp"
+                android:text="@string/user_quiz_motivation_question_label"
+                android:textColor="@color/text_gray"
+                android:textSize="@dimen/text_size_14"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/userQuizAlreadyBicycleUserOpenQuestion" />
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/userQuizMotivationOpenQuestion"
                 style="@style/textInputLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_small"
                 android:hint="@string/user_quiz_motivation_question"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/userQuizAlreadyBicycleUserOpenQuestion">
+                app:layout_constraintTop_toBottomOf="@id/userQuizMotivationOpenQuestionLabel">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -197,16 +210,29 @@
 
             </RadioGroup>
 
+            <TextView
+                android:id="@+id/userQuizProblemsOnWayOpenQuestionLabel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:lineSpacingExtra="3dp"
+                android:text="@string/user_quiz_problems_on_way_question_label"
+                android:textColor="@color/text_gray"
+                android:textSize="@dimen/text_size_14"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/userQuizAccidentVictimAnswer" />
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/userQuizProblemsOnWayOpenQuestion"
                 style="@style/textInputLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_small"
                 android:hint="@string/user_quiz_problems_on_way_question"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/userQuizAccidentVictimAnswer">
+                app:layout_constraintTop_toBottomOf="@id/userQuizProblemsOnWayOpenQuestionLabel">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -216,16 +242,29 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
+            <TextView
+                android:id="@+id/userQuizTimeOnWayOpenQuestionLabel"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/margin_medium"
+                android:lineSpacingExtra="3dp"
+                android:text="@string/user_quiz_time_on_way_question_label"
+                android:textColor="@color/text_gray"
+                android:textSize="@dimen/text_size_14"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/userQuizProblemsOnWayOpenQuestion" />
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/userQuizTimeOnWayOpenQuestion"
                 style="@style/textInputLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_medium"
+                android:layout_marginTop="@dimen/margin_small"
                 android:hint="@string/user_quiz_time_on_way_question"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/userQuizProblemsOnWayOpenQuestion">
+                app:layout_constraintTop_toBottomOf="@id/userQuizTimeOnWayOpenQuestionLabel">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
