Create stepper logic to pass the another fragment

--- a/app/src/main/res/layout/fragment_user_form.xml
+++ b/app/src/main/res/layout/fragment_user_form.xml
@@ -460,8 +460,7 @@
                         android:layout_marginTop="@dimen/margin_big"
                         android:layout_marginEnd="@dimen/margin_medium"
                         android:layout_marginBottom="@dimen/margin_small"
-                        android:enabled="@{viewModel.isButtonEnabled}"
-                        android:onClick="@{() -> viewModel.showLgpd()}"
+                        android:onClick="@{() -> viewModel.navigateToNextStep()}"
                         android:padding="@dimen/padding_medium"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
