Create the trips adapter to receive a title and a bike

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,6 +12,7 @@
     <color name="orange">#ffab00</color>
     <color name="purple">#7b1fa2</color>
     <color name="green">#388e3c</color>
+    <color name="bg_green">#6EC581</color>
     <color name="blue">#1976d2</color>
     <color name="red">#C24439</color>
     <color name="black">#000</color>
