Create logic to get the withdraws and devolutions and convert in another object model to the trips

--- a/app/src/main/res/layout/fragment_trips.xml
+++ b/app/src/main/res/layout/fragment_trips.xml
@@ -29,8 +29,8 @@
             android:text="@string/activities_historic"
             android:textAllCaps="true"
             android:textColor="@color/gray_2"
-            android:textStyle="bold"
             android:textSize="@dimen/text_size_medium"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bikeActionMenuRecyclerView" />
@@ -40,7 +40,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
-            android:clipToPadding="true"
+            android:paddingBottom="16dp"
+            android:clipToPadding="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
