--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,4 +28,5 @@
     <color name="bike_action_text_gray">#828282</color>
     <color name="green_teal">#018786</color>
     <color name="gray_silver">#BDBDBD</color>
+    <color name="yellow">#F2C94C</color>
 </resources>
