--- a/app/src/main/res/layout/fragment_trips.xml
+++ b/app/src/main/res/layout/fragment_trips.xml
@@ -10,9 +10,9 @@
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/bikeActionMenuRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
+            android:layout_height="@dimen/height_160"
             android:layout_marginStart="@dimen/margin_medium"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="@dimen/margin_48"
             android:layout_marginEnd="@dimen/margin_medium"
             android:clipToPadding="false"
             app:layout_constraintEnd_toEndOf="parent"
@@ -39,8 +39,8 @@
             android:id="@+id/rvActivities"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="16dp"
-            android:paddingBottom="16dp"
+            android:layout_marginTop="@dimen/margin_medium"
+            android:paddingBottom="@dimen/padding_medium"
             android:clipToPadding="false"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
