--- a/app/src/main/res/layout/item_activities_historic.xml
+++ b/app/src/main/res/layout/item_activities_historic.xml
@@ -4,7 +4,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="16dp"
+        android:layout_marginHorizontal="@dimen/margin_medium"
         android:layout_marginTop="@dimen/margin_12"
         android:background="@color/white"
         app:cardUseCompatPadding="true">
@@ -16,8 +16,8 @@
 
         <ImageView
                 android:id="@+id/iv_bike_item_actvities"
-                android:layout_width="100dp"
-                android:layout_height="96dp"
+                android:layout_width="@dimen/width_100"
+                android:layout_height="@dimen/height_96"
                 android:layout_weight="0.25"
                 android:adjustViewBounds="false"
                 android:contentDescription="@string/bicycle_image_view_descripition"
@@ -89,8 +89,8 @@
                     android:layout_height="wrap_content"
                     android:background="@color/bg_green"
                     android:gravity="center"
-                    android:padding="4dp"
-                    android:text="devolvida"
+                    android:padding="@dimen/padding_minimun"
+                    tools:text="devolvida"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
                     android:textStyle="bold"
