Fix bugs and create a new logic to TripDetail

--- a/app/src/main/res/layout/activity_trip_detail.xml
+++ b/app/src/main/res/layout/activity_trip_detail.xml
@@ -43,7 +43,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_medium"
                     android:layout_marginTop="@dimen/margin_medium"
-                    android:text="@{viewModel.bikeHolder.name}"
                     android:textColor="@color/text_gray"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/iv_trip_detail_bike"
@@ -55,7 +54,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_medium"
                     android:layout_marginTop="@dimen/margin_medium"
-                    android:text="@{@string/bike_order_number(viewModel.bikeHolder.orderNumber.toString())}"
                     android:textColor="@color/text_gray"
                     app:layout_constraintStart_toEndOf="@id/tv_trip_detail_bike_name"
                     app:layout_constraintTop_toBottomOf="@id/iv_trip_detail_bike"
@@ -68,7 +66,6 @@
                     android:layout_marginStart="@dimen/margin_medium"
                     android:layout_marginTop="@dimen/margin_medium"
                     android:layout_marginEnd="@dimen/margin_medium"
-                    android:text="@{@string/bike_series_number(viewModel.bikeHolder.serialNumber)}"
                     android:textColor="@color/text_gray"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -102,7 +99,6 @@
                     android:layout_marginTop="@dimen/margin_medium"
                     android:layout_marginEnd="@dimen/margin_medium"
                     android:maxLength="20"
-                    android:text="@{ExtensionFunctions.getLastWithdraw(viewModel.bikeHolder).user.name}"
                     android:textColor="@color/black"
                     android:textSize="@dimen/text_size_medium"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -116,7 +112,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_medium"
                     android:layout_marginEnd="@dimen/margin_medium"
-                    android:text="@{@string/bike_withdraw_date(ExtensionFunctions.getLastWithdraw(viewModel.bikeHolder).date)}"
                     android:textColor="@color/text_gray"
                     android:textSize="12sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -130,7 +125,6 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_medium"
                     android:layout_marginEnd="@dimen/margin_medium"
-                    android:text="@{@string/bike_devolution_date(viewModel.devolutionDate)}"
                     android:textColor="@color/text_gray"
                     android:textSize="12sp"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -143,7 +137,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
-                    android:background="@color/yellow"
                     android:gravity="center"
                     android:paddingVertical="@dimen/padding_small"
                     android:textColor="@color/white"
@@ -152,11 +145,12 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_trip_detail_return_date"
+                    tools:background="@color/yellow"
                     tools:text="EMPRÉSTIMO" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.cardview.widget.CardView>
 
+    </androidx.cardview.widget.CardView>
 
     <Button
             android:id="@+id/btn_trip_detail_confirm"
@@ -166,7 +160,6 @@
             android:layout_marginTop="@dimen/margin_large"
             android:layout_marginEnd="@dimen/margin_medium"
             android:layout_marginBottom="@dimen/margin_medium"
-            android:onClick="@{() -> viewModel.finalizeDevolution()}"
             android:padding="@dimen/padding_medium"
             android:text="@string/return_bike"
             android:textStyle="bold"
