--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -47,6 +47,9 @@
         <argument
                 android:name="bikeStatus"
                 app:argType="string" />
+        <argument
+                android:name="id"
+                app:argType="string" />
     </activity>
 
 </navigation>
