--- a/app/src/main/res/layout/bicycle_cell.xml
+++ b/app/src/main/res/layout/bicycle_cell.xml
@@ -83,6 +83,8 @@
                     android:singleLine="true"
                     android:textAlignment="center"
                     android:textColor="@color/white"
+                    android:visibility="invisible"
+                    tools:visibility="visible"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
