--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,6 +10,10 @@
         <item name="actionBarTheme">@style/ActionBar</item>
     </style>
 
+    <style name="SplashTheme" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/splash_bg</item>
+    </style>
+
     <style name="AppTheme.WhiteEditText" parent="Widget.AppCompat.EditText">
         <item name="android:textColor">@color/white</item>
     </style>
