splash screen finished

--- a/app/src/main/res/drawable/splash_bg.xml
+++ b/app/src/main/res/drawable/splash_bg.xml
@@ -4,6 +4,6 @@
     <item android:drawable="@color/white" />
     <item>
         <bitmap
-                android:src="@drawable/bike_bg" />
+                android:src="@drawable/splash_image_bg" />
     </item>
 </layer-list>
