recreated login flow

--- a/app/src/main/res/layout/activity_add_community.xml
+++ b/app/src/main/res/layout/activity_add_community.xml
@@ -110,12 +110,11 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button android:layout_width="wrap_content"
-            android:layout_gravity="right"
+    <Button android:layout_width="match_parent"
             android:text="@string/community_add_button"
             android:id="@+id/addCommunityButton"
-            android:layout_marginTop="16dp"
-            android:layout_marginRight="16dp"
+            android:layout_margin="16dp"
+            android:padding="@dimen/padding_medium"
             android:layout_height="wrap_content" />
 
 </LinearLayout>
