fix to show btn devolution when bike withdraw no has devolution

--- a/app/src/main/res/layout/activity_trip_detail.xml
+++ b/app/src/main/res/layout/activity_trip_detail.xml
@@ -162,6 +162,8 @@
             android:layout_marginBottom="@dimen/margin_medium"
             android:padding="@dimen/padding_medium"
             android:text="@string/return_bike"
+            android:visibility="invisible"
+            tools:visibility="visible"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
